<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NewTransactionActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/glNewTranscBottom"
        app:layout_constraintEnd_toStartOf="@id/glNewTranscEnd"
        app:layout_constraintStart_toEndOf="@id/glNewTranscStart"
        app:layout_constraintTop_toBottomOf="@id/glNewTranscTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/Form.Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Form.Label"
                    android:text="@string/newtransc_text_concept" />

                <EditText
                    android:id="@+id/etNewTranscConcept"
                    style="@style/Form.Input"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:hint="@string/newtransc_hint_concept"/>

            </LinearLayout>

            <LinearLayout
                style="@style/Form.Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Form.Label"
                    android:text="@string/newtransc_text_amount" />

                <EditText
                    android:id="@+id/etNewTranscAmount"
                    style="@style/Form.Input"
                    android:hint="@string/newtransc_hint_balance"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                style="@style/Form.Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Form.Label"
                    android:text="@string/newtransc_text_category" />

                <AutoCompleteTextView
                    android:id="@+id/actvNewTranscCategory"
                    style="@style/Form.Input"
                    android:completionThreshold="0"
                    android:hint="@string/newtransc_hint_category"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                style="@style/Form.Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Form.Label"
                    android:text="@string/newtransc_text_type" />

                <Spinner
                    android:id="@+id/spNewTranscType"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="@dimen/tsize_newtransc_value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNewTranscSource"
                style="@style/Form.Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Form.Label"
                    android:text="@string/newtransc_text_source" />

                <Spinner
                    android:id="@+id/spNewTranscSource"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="@dimen/tsize_newtransc_value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNewTranscDestination"
                style="@style/Form.Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Form.Label"
                    android:text="@string/newtransc_text_destination" />

                <Spinner
                    android:id="@+id/spNewTranscDestination"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="@dimen/tsize_newtransc_value" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/cbNewTranscIsPending"
                style="@style/Form.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newtransc_text_ispending" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNewTransc"
        style="@style/Activity.Fab"
        android:contentDescription="@string/newtransc_contdescr_fab"
        android:src="@drawable/icon_save"
        app:layout_constraintBottom_toTopOf="@id/glNewTranscBottom"
        app:layout_constraintEnd_toStartOf="@id/glNewTranscEnd" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glNewTranscStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_main_container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glNewTranscEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_main_container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glNewTranscTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_main_container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glNewTranscBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/margin_main_container" />


</androidx.constraintlayout.widget.ConstraintLayout>