<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DashboardActivity">


    <LinearLayout
        android:id="@+id/llDashboardHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/glDashTop"
        app:layout_constraintStart_toEndOf="@id/glDashStart"
        app:layout_constraintEnd_toStartOf="@id/glDashEnd">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dash_label_available"
            android:textSize="@dimen/tsize_main_labels" />

        <TextView
            android:id="@+id/tvDashboardAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margint_main_values"
            android:gravity="center"
            android:textSize="@dimen/ts_main_values"
            android:textStyle="bold"
            tools:text="@string/dash_available" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDashboardBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/llDashboardHeader"
        app:layout_constraintStart_toEndOf="@id/glDashStart"
        app:layout_constraintEnd_toStartOf="@id/glDashEnd"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDashboardDetails"
            style="@style/Main.Card">

            <TextView
                style="@style/Main.CardContent"
                android:contentDescription="@string/dash_contdescrp_details"
                android:text="@string/dash_text_details"
                app:drawableBottomCompat="@drawable/icon_list" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDashboardPending"
            style="@style/Main.Card">

            <TextView
                style="@style/Main.CardContent"
                android:contentDescription="@string/dash_contdescr_pending"
                android:text="@string/dash_text_pending"
                app:drawableBottomCompat="@drawable/icon_warning" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDashboard"
        style="@style/Activity.Fab"
        android:contentDescription="@string/dash_contdescrp_fab"
        android:src="@drawable/icon_add"
        app:layout_constraintEnd_toStartOf="@id/glDashEnd"
        app:layout_constraintBottom_toTopOf="@id/glDashBottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDashStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_main_container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDashEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_main_container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDashTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_main_container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDashBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/margin_main_container" />

</androidx.constraintlayout.widget.ConstraintLayout>