<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvFragAcctTitle"
        style="@style/Activity.Title"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/glFragAcctEnd"
        app:layout_constraintStart_toEndOf="@id/glFragAcctStart"
        app:layout_constraintTop_toBottomOf="@id/glFragAcctTop"
        tools:text="Bancolombia" />

    <LinearLayout
        android:id="@+id/llFragAcctBalance"
        style="@style/Form.Field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/glFragAcctEnd"
        app:layout_constraintStart_toEndOf="@id/glFragAcctStart"
        app:layout_constraintTop_toBottomOf="@+id/tvFragAcctTitle">

        <TextView
            style="@style/Form.Label"
            android:text="@string/fragmodacc_text_labelbalance" />

        <EditText
            android:id="@+id/etFragAcctBalance"
            style="@style/Form.Input"
            android:hint="@string/fragmodacc_hint_balance"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFragAcctDesc"
        style="@style/Form.Field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/glFragAcctEnd"
        app:layout_constraintStart_toEndOf="@id/glFragAcctStart"
        app:layout_constraintTop_toBottomOf="@+id/llFragAcctBalance">

        <TextView
            style="@style/Form.Label"
            android:text="@string/fragmodacc_text_labeldesc" />

        <EditText
            android:id="@+id/etFragAcctDescr"
            style="@style/Form.Input"
            android:hint="@string/fragmodacc_hint_desc"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbFragAcctCash"
        style="@style/Form.CheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragmodacc_text_cbcash"
        app:layout_constraintEnd_toStartOf="@id/glFragAcctEnd"
        app:layout_constraintStart_toEndOf="@id/glFragAcctStart"
        app:layout_constraintTop_toBottomOf="@id/llFragAcctDesc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFragAcctStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_main_container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFragAcctEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_main_container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFragAcctTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_main_container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFragAcctBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/margin_main_container" />

</androidx.constraintlayout.widget.ConstraintLayout>